--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/iclauncher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/iclauncher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -16,10 +16,6 @@
         <activity
             android:name="logic.AnimalsListActivity"
             android:label="@string/title_activity_animals_list"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".ClauDicotomicaActivity"
-            android:label="@string/title_activity_clau_dicotomica"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
