V3 28/03/2020 camera en funcionament

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".DichotomousKeyActivity"
+            android:label="@string/title_activity_dichotomous_key"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".CameraActivity"
             android:label="@string/title_activity_camera2"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".AnimalDataActivity"
             android:label="@string/title_activity_animal_data"
