--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.petjadesapp">
+    package="com.monzonis.petjadesapp">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,29 +18,33 @@
         android:roundIcon="@drawable/iclauncher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+<!--
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/banner_ad_unit_id"/>
+-->
         <activity
-            android:name=".activity.AboutActivity"
+            android:name="com.monzonis.petjadesapp.activity.AboutActivity"
             android:label="@string/title_activity_about"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.DichotomousKeyActivity"
+            android:name="com.monzonis.petjadesapp.activity.DichotomousKeyActivity"
             android:label="@string/title_activity_dichotomous_key"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.CameraActivity"
+            android:name="com.monzonis.petjadesapp.activity.CameraActivity"
             android:label="@string/title_activity_camera2"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.AnimalDataActivity"
+            android:name="com.monzonis.petjadesapp.activity.AnimalDataActivity"
             android:label="@string/title_activity_animal_data"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.AnimalsListActivity"
+            android:name="com.monzonis.petjadesapp.activity.AnimalsListActivity"
             android:label="@string/title_activity_animals_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.monzonis.petjadesapp.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
